--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,14 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="da">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>Fan-platform</title>
   </head>
   <body>
+    <!-- HER MOUNTER VI REACT -->
     <div id="root"></div>
+    <!-- VITE loader din main.tsx -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
